<resources>
    <string name="app_name">IntentTestApp</string>
    <string name="name_label"> Nombre(s) </string>
    <string name="lastName_label"> Apellido </string>
    <string name="email_label"> Email </string>
    <string name="phone_label"> Teléfono </string>
    <string name="age_label"> Edad </string>
    <string name="data_label"> Datos personales </string>
    <string name="submit_label"> Guardar </string>



</resources>