<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_label"
                    android:textSize="18dp"
                    android:textStyle="italic"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:id="@+id/namesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_label"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastName_label"
                        android:layout_toRightOf="@id/nameTextField"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_margin="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/namesLayout"
            android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_label"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/namesLayout"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_label"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ageTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age_label"
                    android:layout_toRightOf="@id/nameTextField"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit_label" />

    </RelativeLayout>

</layout>